force-app/main/default/objects/Thread__c/fields/DIA_Theme_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>DIA_Theme_Group_Name__c</fullName>
    <description>Display name for related theme group from common code</description>
    <formula>CRM_Theme_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theme Group Name</label>
    <type>Text</type>
</CustomField>