force-app/main/default/objects/Thread__c/fields/DIA_Timeline_Category__c.field-meta.xml
<CustomField>
    <fullName>DIA_Timeline_Category__c</fullName>
    <description>Field defining the most descriptive categorization of the thread</description>
    <formula>IF(ISBLANK(CRM_Theme__c), IF(ISPICKVAL(STO_Category__c, &apos;&apos;), &apos;&apos;, TEXT(STO_Category__c)), CRM_Theme__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline Category</label>
    <type>Text</type>
</CustomField>