force-app/main/default/objects/Thread__c/fields/DIA_Timeline_Icon__c.field-meta.xml
<CustomField>
    <fullName>DIA_Timeline_Icon__c</fullName>
    <formula>CASE(CRM_Thread_Type__c,
&quot;STO&quot;,&apos;standard:messaging_user&apos;,
&quot;STB&quot;,&apos;standard:messaging_user&apos;,
&quot;Chat&quot;,&apos;standard:live_chat&apos;,
&quot;standard:bot&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline Icon</label>
    <type>Text</type>
</CustomField>