force-app/main/default/objects/Thread__c/fields/DIA_Timeline_Name__c.field-meta.xml
<CustomField>
    <fullName>DIA_Timeline_Name__c</fullName>
    <formula>CASE(CRM_Type__c,
    &apos;STB&apos;, &apos;Skriv til bruker - &apos;,
    &apos;STO&apos;, &apos;Skriv til oss - &apos;,
    &apos;CHAT&apos;, &apos;Chat - &apos;,
    &apos;Tråd&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline Name</label>
    <type>Text</type>
</CustomField>